<resources>
    <string name="app_name">BoostMem</string>
    <string name="home">Home</string>
    <string name="game">Home > Games</string>
    <string name="cardManagement">Card Management</string>
    <string name="cardCreate">Card Management > Create</string>
    <string name="statistics">Statistics</string>
    <string name="notifications">Notifications</string>4
    <string name="notificationCreate">Notification > Create</string>
    <string name="settings">Settings</string>
    <string name="review">Review</string>
    <string name="category">Category: </string>
    <string name="gameType1">Singleplayer</string>
    <string name="gameType2">Multiplayer</string>


    <!--    Tab Notifications-->
    <string name="daily">Daily</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>


    <!--    Create Deck         -->
    <string name="createDeck">Create a new deck</string>
    <string name="deckName_textview">Deck name</string>
    <string name="description_textview">Description</string>
    <string name="category_textview">Category</string>

    <!--    Create Card        -->
    <string name="chooseDeck">Choose Deck...</string>
    <string name="front">Front</string>
    <string name="front_edittext">Word</string>
    <string name="back">Back</string>
    <string name="back_edittext">Meaning / Description</string>

    <!--        Create Notification-->
    <string name="setTime">Set Time</string>
    <string name="titleCreate">Choose time for boost your brain :)</string>
    <string name="timetoset">12 . 30 PM</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="tu">T</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="su">S</string>


    <!--        Edit Notification-->
    <string name="editTime">Edit time</string>
    <string name="editNotification_textview">Edit notification</string>


    <!--        Game-->
    <string name="basicReview">Basic Review</string>
    <string name="matchingGame">Matching Game</string>
    <string name="quiz">Quiz</string>
    <string name="yenchaGame">Yen-cha Game</string>
    <string name="skip">Skip</string>
    <string name="flip">Flip</string>
    <string name="reviewComplete">Review Complete!</string>
    <string name="correctAnswer">Correct answers: </string>
    <string name="incorrectAnswer">Incorrect answers: </string>
    <string name="done">Done</string>

    <!--    Example-->
    <string name="string" translatable="false"> any member of the group of animals similar to the cat, such as the lion</string>

    <!--    Hour Min Text-->
    <string name="hr">hour</string>
    <string name="min">minute</string>


    <!--    Statistics-->
    <string name="overall">Overall</string>
    <string name="mostreview">Most reviewed decks</string>
    <string name="grades">Grades</string>
    <string name="labelDeck">Deck name</string>


    <!--    Dialog-->
    <string name="addCate">Add</string>
    <string name="enterCate">Enter category name...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="reviewToday">Review today:</string>
    <string name="title_score">Basic Review</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="gameOver">Game Over</string>
    <string name="tryAgain">Try again</string>
    <string name="chance">Chance: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
